Use CharacterInfo as separate style block as BEM notation and update it styles. Fix button style modifiers syntax. Add scrollbar styles.

--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -1,21 +1,15 @@
 @import "../../style/variables.scss";
 
-.character {
-    &__info {
-        position: relative;
-        z-index: 5;
-        align-self: flex-start;
+.character-info {
+    &__block {
+        position: sticky;
+        top: 30px;
         min-height: 300px;
-        padding: 25px;
+        max-height: calc(100vh - 60px);
+        padding: 20px;
         background-color: $white;
         box-shadow: 0px 0px 20px rgba($black, 0.25);
-
-        &-name {
-            font-weight: bold;
-            font-size: 22px;
-            line-height: 29px;
-            text-transform: uppercase;
-        }
+        overflow-y: auto;
 
         .skeleton {
             margin-top: 30px;
@@ -25,51 +19,72 @@
     &__basics {
         display: grid;
         grid-template-columns: 150px auto;
-        column-gap: 25px;
+        column-gap: 20px;
+    }
+
+    &__name {
+        font-weight: bold;
+        font-size: 22px;
+        line-height: 29px;
+        text-transform: uppercase;
     }
 
     &__image {
-        &--small {
-            width: 150px;
-            height: 150px;
+        position: relative;
+        display: block;
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+        background-color: $grey;
+
+        &--no-image {
+            box-sizing: border-box;
+            background: none;
+            border: 2px dashed $main;
         }
     }
 
-    &__btns {
+    &__button-list {
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-top: 35px;
+        margin-top: 20px;
+    }
 
-        a:nth-child(2) {
-            margin-top: 10px;
+    &__button {
+        margin: 0 20px 0 0;
+
+        &:last-child {
+            margin-right: 0;
         }
     }
 
-    &__descr {
+    &__description {
         margin-top: 15px;
         font-size: 14px;
         line-height: 18px;
+
+        &:empty {
+            margin: 0;
+        }
     }
 
-    &__comics {
+    &__title {
         font-weight: bold;
         font-size: 18px;
         line-height: 24px;
         margin-top: 10px;
+    }
 
-        &-list {
-            position: relative;
-            margin-top: 10px;
-        }
+    &__comic-list {
+        position: relative;
+        margin-top: 10px;
+    }
 
-        &-item {
-            width: 100%;
-            padding: 0px 10px;
-            line-height: 25px;
-            box-shadow: 0px 4px 4px rgba($black, 0.25);
-            margin-top: 10px;
-        }
+    &__comic {
+        width: 100%;
+        padding: 0px 10px;
+        line-height: 25px;
+        box-shadow: 0px 4px 4px rgba($black, 0.25);
+        margin-top: 10px;
     }
 
     &__select {
