--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -15,13 +15,13 @@
     cursor: pointer;
     transition: opacity $transition-duration;
 
-    &__long {
+    &--long {
         display: block;
         min-width: 170px;
         margin: 45px auto 0 auto;
     }
 
-    &__secondary {
+    &--secondary {
         background-color: $grey;
     }
 
